--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@humeai/voice-react": "^0.1.17",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.35",
     "@tabler/icons-react": "^3.20.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
