--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@humeai/voice-react": "^0.1.17",
+    "@next/font": "^14.2.15",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.35",
     "@tabler/icons-react": "^3.20.0",
